# BigInt

./: .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/: CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
CMake/: Findcodecov.cmake
CMake/modules/: CodeCoverage.cmake
docs/: Doxyfile
include/: BigInt.hpp  utils.hpp
include/BigInt64/: BigInt64.hpp  test.cpp
include/BigInt64/constructors/: constructors.cpp
include/BigInt64/operators/: io_stream.cpp
include/constructors/: constructors.hpp
include/functions/: conversion.hpp  math.hpp  random.hpp  utility.hpp
include/operators/: arithmetic_assignment.hpp  assignment.hpp  binary_arithmetic.hpp  bitwise.hpp  bitwise_assignment.hpp  increment_decrement.hpp  io_stream.hpp  relational.hpp  unary_arithmetic.hpp
scripts/: combine_tests.sh  integrate_tests.sh  release.sh  run_tests.sh  test.sh
src/: BigInt.cpp  BigInt.hpp
test/: catch.hpp  test.cpp
test/constructors/: constructors.cpp  constructors.test.cpp
test/functions/: conversion.test.cpp  math.cpp  math.test.cpp  random.cpp  random.test.cpp
test/operators/: arithmetic_assignment.cpp  arithmetic_assignment.test.cpp  assignment.cpp  assignment.test.cpp  binary_arithmetic.cpp  binary_arithmetic.test.cpp  bitwise.cpp  bitwise_assignment.cpp  increment_decrement.test.cpp  io_stream.cpp  relational.test.cpp  unary_arithmetic.test.cpp
